@@ -46,7 +46,7 @@ namespace Rcpp {
 
     Date::Date(const std::string &s, const std::string &fmt) {
 	Rcpp::Function strptime("strptime");	// we cheat and call strptime() from R
-	m_d = Rcpp::as<int>(strptime(s, fmt));
+	m_d = Rcpp::as<int>(strptime(s, fmt, "UTC"));
 	update_tm();
     }
 
@@ -132,6 +132,8 @@ namespace Rcpp {
     Date operator+(const Date &date, int offset) {
 	Date newdate(date.m_d);
 	newdate.m_d += offset;
+	time_t t = 24*60*60 * newdate.m_d;	// days since epoch to seconds since epo
+	newdate.m_tm = *gmtime(&t);		// this may need a Windows fix, re-check R's datetime.c
 	return newdate;
     }
 
